force-app/main/default/objects/MD_Quote__c/MD_Quote__c.object-meta.xml
<CustomObject>
    <label>Client Proposal</label>
    <nameField>
        <displayFormat>CP-{000000000}</displayFormat>
        <label>Client Proposal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Proposals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>