force-app/main/default/objects/MD_Quote__c/fields/AdditionalName__c.field-meta.xml
<CustomField>
    <fullName>AdditionalName__c</fullName>
    <label>Additional To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>