force-app/main/default/objects/MD_Quote__c/fields/Discount_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Status__c</fullName>
    <label>Discount Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>