force-app/main/default/objects/MD_Quote__c/fields/Discount_Avg__c.field-meta.xml
<CustomField>
    <fullName>Discount_Avg__c</fullName>
    <formula>IF(
   Subtotal__c &gt; 0,
   ( Total_Discount_Amount__c  / Subtotal__c) ,
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>