force-app/main/default/objects/MD_Quote__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <label>Installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Will be done by our trained engineers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>