force-app/main/default/objects/MD_Quote__c/fields/IsSyncing__c.field-meta.xml
<CustomField>
    <fullName>IsSyncing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Syncing allows this line items and total value to update the Opportunity automatically, ensuring both remain aligned.
Note: Only one Client Proposal can be synced to an Opportunity at a time.</inlineHelpText>
    <label>Syncing</label>
    <type>Checkbox</type>
</CustomField>