force-app/main/default/objects/MD_Quote__c/fields/Last_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Date__c</fullName>
    <label>Last Reminder Date</label>
    <type>Date</type>
</CustomField>