force-app/main/default/objects/MD_Quote__c/fields/LineItemCount__c.field-meta.xml
<CustomField>
    <fullName>LineItemCount__c</fullName>
    <label>Line Items</label>
    <summaryForeignKey>MD_Quote_Line_Item__c.QuoteId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>