force-app/main/default/objects/MD_Quote__c/fields/MD_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>MD_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Opportunity</label>
    <referenceTo>MD_Opportunity__c</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>