force-app/main/default/objects/MD_Quote__c/fields/Presented_Date__c.field-meta.xml
<CustomField>
    <fullName>Presented_Date__c</fullName>
    <label>Presented Date</label>
    <type>Date</type>
</CustomField>