force-app/main/default/objects/MD_Quote__c/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <label>Sales Tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>