force-app/main/default/objects/MD_Quote__c/fields/ShippingHandling__c.field-meta.xml
<CustomField>
    <fullName>ShippingHandling__c</fullName>
    <label>Shipping and Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>