force-app/main/default/objects/MD_Quote__c/fields/ShippingName__c.field-meta.xml
<CustomField>
    <fullName>ShippingName__c</fullName>
    <label>Ship to Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>