force-app/main/default/objects/MD_Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Accepted/Denied</fullName>
                <isActive>false</isActive>
                <label>Accepted/Denied</label>
            </value>
            <value>
                <fullName>Approved/Rejected</fullName>
                <isActive>false</isActive>
                <label>Approved/Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>