force-app/main/default/objects/MD_Quote__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <label>Sum of Discount</label>
    <summarizedField>MD_Quote_Line_Item__c.Discounts__c</summarizedField>
    <summaryForeignKey>MD_Quote_Line_Item__c.QuoteId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>