force-app/main/default/objects/MD_Quote__c/fields/Total_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount_Amount__c</fullName>
    <label>Total Discount Amount</label>
    <summarizedField>MD_Quote_Line_Item__c.Discount_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>MD_Quote_Line_Item__c.Exclude_from_Average__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>MD_Quote_Line_Item__c.QuoteId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>