force-app/main/default/objects/MD_Quote__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Total Price</label>
    <summarizedField>MD_Quote_Line_Item__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>MD_Quote_Line_Item__c.QuoteId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>