force-app/main/default/objects/MD_Quote__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>