force-app/main/default/objects/MD_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>MD_Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Total_Discount__c</columns>
    <columns>Total_Price__c</columns>
    <columns>Discount_Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>